[package]
name = "nft-marketplace-contract"
version = "0.1.0"
authors = ["Lucidspring Inc."]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"
name = "marketplace"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
near-sdk = "3.0.1"
borsh = "0.9.0"
wee_alloc = "0.4.5"